@@ -1,7 +1,7 @@
 package io.github.steaf23.bingoreloaded.command;
 
 import io.github.steaf23.bingoreloaded.data.BingoStatData;
-import io.github.steaf23.bingoreloaded.data.BingoTranslation;
+import io.github.steaf23.bingoreloaded.data.BingoMessage;
 import io.github.steaf23.bingoreloaded.data.ConfigData;
 import io.github.steaf23.bingoreloaded.gameloop.GameManager;
 import io.github.steaf23.bingoreloaded.gameloop.phase.BingoGame;
@@ -16,16 +16,15 @@ import io.github.steaf23.bingoreloaded.player.BingoParticipant;
 import io.github.steaf23.bingoreloaded.player.BingoPlayer;
 import io.github.steaf23.bingoreloaded.settings.CustomKit;
 import io.github.steaf23.bingoreloaded.settings.PlayerKit;
-import io.github.steaf23.bingoreloaded.util.Message;
-import io.github.steaf23.bingoreloaded.util.TranslatedMessage;
-import io.github.steaf23.easymenulib.inventory.MenuBoard;
-import net.md_5.bungee.api.ChatColor;
-import net.md_5.bungee.api.chat.BaseComponent;
-import net.md_5.bungee.api.chat.ComponentBuilder;
-import net.md_5.bungee.api.chat.TextComponent;
+import io.github.steaf23.bingoreloaded.util.BingoPlayerSender;
+import io.github.steaf23.playerdisplay.PlayerDisplay;
+import io.github.steaf23.playerdisplay.inventory.MenuBoard;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.JoinConfiguration;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
-import org.bukkit.command.ConsoleCommandSender;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.checkerframework.checker.nullness.qual.NonNull;
@@ -77,7 +76,7 @@ public class BingoCommand implements TabExecutor
                     return true;
                 }
                 if (!config.useVoteSystem || config.voteUsingCommandsOnly || config.voteList.isEmpty()) {
-                    Message.sendDebug(ChatColor.RED + "Voting is disabled!", player);
+                    BingoPlayerSender.sendMessage(Component.text("Voting is disabled!").color(NamedTextColor.RED), player);
                     return true;
                 }
                 VoteMenu menu = new VoteMenu(menuBoard, config.voteList, lobby);
@@ -106,7 +105,7 @@ public class BingoCommand implements TabExecutor
             case "wait" -> {
                 if (player.hasPermission("bingo.settings")) {
                     session.pauseAutomaticStart();
-                    Message.sendDebug("Toggled automatic starting timer", player);
+                    BingoPlayerSender.sendMessage(Component.text("Toggled automatic starting timer"), player);
                 }
             }
             case "getcard" -> {
@@ -132,7 +131,7 @@ public class BingoCommand implements TabExecutor
                     return false;
 
                 if (!session.isRunning()) {
-                    new TranslatedMessage(BingoTranslation.NO_DEATHMATCH).color(ChatColor.RED).send(player);
+                    BingoMessage.NO_DEATHMATCH.sendToAudience(player, NamedTextColor.RED);
                     return false;
                 }
 
@@ -147,19 +146,19 @@ public class BingoCommand implements TabExecutor
             }
             case "stats" -> {
                 if (!config.savePlayerStatistics) {
-                    TextComponent text = new TextComponent("Player statistics are not being tracked at this moment!");
-                    text.setColor(ChatColor.RED);
-                    Message.sendDebug(text, player);
+                    Component text = Component.text("Player statistics are not being tracked at this moment!")
+                            .color(NamedTextColor.RED);
+                    BingoPlayerSender.sendMessage(text, player);
                     return true;
                 }
                 BingoStatData statsData = new BingoStatData();
-                Message msg;
+                Component msg;
                 if (args.length > 1 && player.hasPermission("bingo.admin")) {
                     msg = statsData.getPlayerStatsFormatted(args[1]);
                 } else {
                     msg = statsData.getPlayerStatsFormatted(player.getUniqueId());
                 }
-                msg.send(player);
+                BingoPlayerSender.sendMessage(msg, player);
                 return true;
             }
             case "kit" -> {
@@ -172,7 +171,7 @@ public class BingoCommand implements TabExecutor
                     case "item" -> givePlayerBingoItem(player, args[2]);
                     case "add" -> {
                         if (args.length < 4) {
-                            Message.sendDebug(ChatColor.RED + "Please specify a kit name for slot " + args[2], player);
+                            BingoPlayerSender.sendMessage(Component.text("Please specify a kit name for slot " + args[2]).color(NamedTextColor.RED), player);
                             return false;
                         }
                         addPlayerKit(args[2], Arrays.stream(args).collect(Collectors.toList()).subList(3, args.length), player);
@@ -191,14 +190,16 @@ public class BingoCommand implements TabExecutor
                     return false;
                 }
 
-                Message.sendDebug("Here are all the teams with at least 1 player:", player);
+                BingoPlayerSender.sendMessage(Component.text("Here are all the teams with at least 1 player:"), player);
                 session.teamManager.getActiveTeams().getTeams().forEach(team -> {
                     if (team.getMembers().isEmpty()) {
                         return;
                     }
-                    player.spigot().sendMessage(new ComponentBuilder(" - ").append(team.getColoredName()).append(": " + team.getMembers().stream()
-                            .map(p -> p.getDisplayName())
-                            .collect(Collectors.joining(", "))).build());
+                    player.sendMessage(Component.text(" - ").append(team.getColoredName()).append(Component.text(": ")
+                            .append(Component.join(JoinConfiguration.separator(Component.text(", ")),
+                                    team.getMembers().stream()
+                                    .map(BingoParticipant::getDisplayName)
+                                    .toList()))));
                 });
 
             }
@@ -207,9 +208,9 @@ public class BingoCommand implements TabExecutor
             }
             default -> {
                 if (player.hasPermission("bingo.admin")) {
-                    new TranslatedMessage(BingoTranslation.COMMAND_USAGE).color(ChatColor.RED).arg("/bingo [getcard | stats | start | end | join | vote | back | leave | deathmatch | creator | teams | kit | wait | teamedit]").send(player);
+                    BingoMessage.COMMAND_USAGE.sendToAudience(player, NamedTextColor.RED, Component.text("/bingo [getcard | stats | start | end | join | vote | back | leave | deathmatch | creator | teams | kit | wait | teamedit]"));
                 } else {
-                    new TranslatedMessage(BingoTranslation.COMMAND_USAGE).color(ChatColor.RED).arg("/bingo [getcard | stats | join | vote | back | leave]").send(player);
+                    BingoMessage.COMMAND_USAGE.sendToAudience(player, NamedTextColor.RED, Component.text("/bingo [getcard | stats | join | vote | back | leave]"));
                 }
             }
         }
@@ -224,7 +225,7 @@ public class BingoCommand implements TabExecutor
             case "4" -> PlayerKit.CUSTOM_4;
             case "5" -> PlayerKit.CUSTOM_5;
             default -> {
-                Message.sendDebug(ChatColor.RED + "Invalid slot, please a slot from 1 through 5 to save this kit in", commandSender);
+                BingoPlayerSender.sendMessage(Component.text("Invalid slot, please a slot from 1 through 5 to save this kit in").color(NamedTextColor.RED), commandSender);
                 yield null;
             }
         };
@@ -236,24 +237,18 @@ public class BingoCommand implements TabExecutor
         for (int i = 0; i < kitNameParts.size() - 1; i++) {
             kitName.append(kitNameParts.get(i)).append(" ");
         }
-        kitName.append(kitNameParts.get(kitNameParts.size() - 1));
+        kitName.append(kitNameParts.getLast());
 
         if (!PlayerKit.assignCustomKit(kitName.toString(), kit, commandSender)) {
-            BaseComponent msg = new TextComponent("");
-            msg.setColor(ChatColor.RED);
-            msg.addExtra("Cannot add custom kit ");
-            msg.addExtra(BingoTranslation.convertColors(kitName.toString()));
-            msg.addExtra(" to slot " + slot + ", this slot already contains kit ");
-            msg.addExtra(PlayerKit.getCustomKit(kit).getName());
-            msg.addExtra(". Remove it first!");
-            Message.sendDebug(msg, commandSender);
+            Component message = PlayerDisplay.MINI_BUILDER
+                    .deserialize("<red>Cannot add custom kit " + kitName + " to slot " + slot + ", this slot already contains kit ")
+                    .append(Component.text(PlayerKit.getCustomKit(kit).name()))
+                    .append(Component.text(". Remove it first!"));
+            BingoPlayerSender.sendMessage(message, commandSender);
         } else {
-            BaseComponent msg = new TextComponent("");
-            msg.setColor(ChatColor.GREEN);
-            msg.addExtra("Created custom kit ");
-            msg.addExtra(BingoTranslation.convertColors(kitName.toString()));
-            msg.addExtra(" in slot " + slot + " from your inventory");
-            Message.sendDebug(msg, commandSender);
+            Component message = PlayerDisplay.MINI_BUILDER
+                    .deserialize("<green>Created custom kit " + kitName + " in slot " + slot + " from your inventory");
+            BingoPlayerSender.sendMessage(message, commandSender);
         }
     }
 
@@ -265,7 +260,7 @@ public class BingoCommand implements TabExecutor
             case "4" -> PlayerKit.CUSTOM_4;
             case "5" -> PlayerKit.CUSTOM_5;
             default -> {
-                Message.sendDebug(ChatColor.RED + "Invalid slot, please a slot from 1 through 5 to save this kit in", commandSender);
+                BingoPlayerSender.sendMessage(Component.text("Invalid slot, please a slot from 1 through 5 to save this kit in").color(NamedTextColor.RED), commandSender);
                 yield null;
             }
         };
@@ -274,19 +269,17 @@ public class BingoCommand implements TabExecutor
         }
 
         CustomKit customKit = PlayerKit.getCustomKit(kit);
-
-        BaseComponent msg = new TextComponent("");
         if (customKit == null) {
-            msg.setColor(ChatColor.RED);
-            msg.addExtra("Cannot remove kit from slot " + slot + " because no custom kit is assigned to this slot");
+            Component message = PlayerDisplay.MINI_BUILDER
+                    .deserialize("<red>Cannot remove kit from slot " + slot + " because no custom kit is assigned to this slot");
+            BingoPlayerSender.sendMessage(message, commandSender);
         } else {
-            msg.setColor(ChatColor.GREEN);
-            msg.addExtra("Removed custom kit ");
-            msg.addExtra(customKit.getName());
-            msg.addExtra(" from slot " + slot);
             PlayerKit.removeCustomKit(kit);
+
+            Component message = PlayerDisplay.MINI_BUILDER
+                    .deserialize("<green>Removed custom kit " + customKit.getName() + " from slot " + slot);
+            BingoPlayerSender.sendMessage(message, commandSender);
         }
-        Message.sendDebug(msg, commandSender);
     }
 
     public void givePlayerBingoItem(Player player, String itemName) {
